profilelist1exp/unpackaged/objects/Partner_Type_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Action_Performed_By__c</fullName>
        <description>capture the record modifiers email address</description>
        <label>Action Performed By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Activate_Delete__c</fullName>
        <formula>IF((now()-LastModifiedDate)*24&gt;24, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Tier 1 – Reseller</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>EMC ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EMC_Integration_Status__c</fullName>
        <label>EMC Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting Sync</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Has Error</fullName>
                </value>
                <value>
                    <fullName>Do Not Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMC_Last_Sync_date__c</fullName>
        <label>EMC Last Sync date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EMC_Operation__c</fullName>
        <label>EMC Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creation</fullName>
                    <default>true</default>
                    <label>Creation</label>
                </value>
                <value>
                    <fullName>Deletion</fullName>
                </value>
                <value>
                    <fullName>Updation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_message__c</fullName>
        <label>Exception message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Price_List_Type__c</fullName>
        <label>Partner Price List Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Distribution_Channel__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>ACQ</fullName>
                </value>
                <value>
                    <fullName>AUTH RESELLER</fullName>
                </value>
                <value>
                    <fullName>GOLD</fullName>
                </value>
                <value>
                    <fullName>PLATINUM</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>SIGNATURE 1 HCP</fullName>
                </value>
                <value>
                    <fullName>SILVER</fullName>
                </value>
                <value>
                    <fullName>SYSTEM VENDOR</fullName>
                </value>
                <value>
                    <fullName>TITANIUM</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Track_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Partner_Track__r.Id , Partner_Track__r.Partner_Track_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Track Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Track</label>
        <referenceTo>Partner_Track__c</referenceTo>
        <relationshipLabel>Partner Type Attributes</relationshipLabel>
        <relationshipName>PartnerType_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Type Attribute</label>
    <nameField>
        <displayFormat>PTA-{000000}</displayFormat>
        <label>Partner Type Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Type Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Partnertrack_Account_PQuotingAcc_False</fullName>
        <active>true</active>
        <description>PartnerTrack related account field Partner_Quoting_Account__c is False and Make it true</description>
        <errorConditionFormula>AND( NOT(ISBLANK(Partner_Track__r.Primary_SMAffinity_Account__c)),
	NOT(Partner_Track__r.Primary_SMAffinity_Account__r.Partner_Quoting_Account__c),not(isPickval(EMC_Operation__c, &apos;Deletion&apos;)))</errorConditionFormula>
        <errorMessage>Related Account is not quoting enabled. Please contact Affinity team for making the account quoting enabled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Partner_Track_For_PTA</fullName>
        <active>true</active>
        <description>Can&apos;t change Partner Track field once created</description>
        <errorConditionFormula>AND( !(ISNEW()),ISCHANGED(Partner_Track__c))</errorConditionFormula>
        <errorMessage>Cannot change the Partner Track</errorMessage>
    </validationRules>
</CustomObject>